--- a/css/style.css
+++ b/css/style.css
@@ -1032,3 +1032,123 @@ body {
   margin-top: 30px;
   text-align: center;
 }
+
+/*****************************************
+// company
+******************************************/
+.company {
+  background: #fff;
+}
+
+.company__inner {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.company__body {
+  margin-top: 46px;
+}
+
+.company__tabs {
+  text-align: center;
+}
+
+.company__tab-item {
+  width: 122px;
+  padding: 9px 20px;
+  color: #2392db;
+  font-weight: 700;
+  -webkit-box-shadow: 5px 7px 34px 0px #f1f1f1;
+          box-shadow: 5px 7px 34px 0px #f1f1f1;
+  background: url(../img/company-arrow-blue.png) no-repeat center left 12px/10px 7px;
+}
+.company__tab-item:nth-child(n+2) {
+  border-left: 1px solid #2392db;
+}
+
+.company__content {
+  display: none;
+}
+.company__content.active {
+  display: block;
+}
+
+.company-info__title {
+  color: #333;
+  font-size: 22px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.company-info__wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+@media (width >= 1280px) {
+  .company-info__wrapper {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+  }
+}
+
+@media (width >= 1280px) {
+  .company-info__item-1 {
+    grid-area: 1/1/2/2;
+  }
+}
+
+@media (width >= 1280px) {
+  .company-info__item-2 {
+    grid-area: 1/2/2/3;
+  }
+}
+
+@media (width >= 1280px) {
+  .company-info__item-3 {
+    grid-area: 2/1/3/2;
+  }
+}
+
+@media (width >= 1280px) {
+  .company-info__item-4 {
+    grid-area: 2/2/3/3;
+  }
+}
+
+@media (width >= 1280px) {
+  .company-info__item-5 {
+    grid-area: 3/1/4/2;
+  }
+}
+
+@media (width >= 1280px) {
+  .company-info__item-6 {
+    grid-area: 3/2/4/5;
+  }
+}
+
+@media (width >= 1280px) {
+  .company-info__item-7 {
+    grid-area: 1/3/2/4;
+  }
+}
+
+@media (width >= 1280px) {
+  .company-info__item-8 {
+    grid-area: 1/4/2/5;
+  }
+}
+
+@media (width >= 1280px) {
+  .company-info__item-9 {
+    grid-area: 2/3/3/4;
+  }
+}
+
+@media (width >= 1280px) {
+  .company-info__item-10 {
+    grid-area: 2/4/3/5;
+  }
+}
