--- a/sass/style.scss
+++ b/sass/style.scss
@@ -955,3 +955,133 @@ body {
   margin-top: 30px;
   text-align: center;
 }
+
+/*****************************************
+// company
+******************************************/
+.company {
+  background: #fff;
+}
+
+.company__inner {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.company__title {
+}
+
+.company__body {
+  margin-top: 46px;
+}
+
+.company__tabs {
+  text-align: center;
+}
+
+.company__tab-item {
+  width: 122px;
+  padding: 9px 20px;
+  color: #2392db;
+  font-weight: 700;
+  box-shadow: 5px 7px 34px 0px #f1f1f1;
+  background: url(../img/company-arrow-blue.png) no-repeat center left 12px /
+    10px 7px;
+
+  &:nth-child(n + 2) {
+    border-left: 1px solid #2392db;
+  }
+}
+
+.company__contents {
+}
+
+.company__content {
+  display: none;
+
+  &.active {
+    display: block;
+  }
+}
+
+.company-info {
+}
+
+.company-info__title {
+  color: #333;
+  font-size: 22px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.company-info__wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+
+  @include mq(pc) {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+  }
+}
+
+.company-info__item-1 {
+  @include mq(pc) {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+}
+.company-info__item-2 {
+  @include mq(pc) {
+    grid-area: 1 / 2 / 2 / 3;
+  }
+}
+.company-info__item-3 {
+  @include mq(pc) {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+}
+.company-info__item-4 {
+  @include mq(pc) {
+    grid-area: 2 / 2 / 3 / 3;
+  }
+}
+.company-info__item-5 {
+  @include mq(pc) {
+    grid-area: 3 / 1 / 4 / 2;
+  }
+}
+.company-info__item-6 {
+  @include mq(pc) {
+    grid-area: 3 / 2 / 4 / 5;
+  }
+}
+.company-info__item-7 {
+  @include mq(pc) {
+    grid-area: 1 / 3 / 2 / 4;
+  }
+}
+.company-info__item-8 {
+  @include mq(pc) {
+    grid-area: 1 / 4 / 2 / 5;
+  }
+}
+.company-info__item-9 {
+  @include mq(pc) {
+    grid-area: 2 / 3 / 3 / 4;
+  }
+}
+.company-info__item-10 {
+  @include mq(pc) {
+    grid-area: 2 / 4 / 3 / 5;
+  }
+}
+
+.company__history {
+}
+
+.company__history-item {
+}
+
+.company__certification {
+}
